--- a/functions/package.json
+++ b/functions/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.7.0",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "node-fetch": "2.6.0",
     "typescript": "^3.9.5"
   },
@@ -29,6 +30,7 @@
     "@firebase/app-types": "^0.6.1",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
+    "@types/module-alias": "^2.0.0",
     "@types/node-fetch": "^2.5.7",
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
