--- a/functions/package.json
+++ b/functions/package.json
@@ -32,10 +32,15 @@
     "@types/express": "^4.17.6",
     "@types/module-alias": "^2.0.0",
     "@types/node-fetch": "^2.5.7",
-    "@types/passport": "^1.0.3",
-    "@types/passport-jwt": "^3.0.3",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "eslint": "^7.3.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-jest": "^23.13.2",
     "esm": "^3.2.25",
     "firebase-functions-test": "^0.2.0",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.5"
   },
   "keywords": [],
