--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -13,7 +13,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
       "@utils": ["utils/"],
       "@utils/*": ["utils/*"]
