--- a/functions/package.json
+++ b/functions/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "build": "rm -rf lib && tsc",
     "build:watch": "rm -rf lib && tsc -w",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint src/**/**/*.ts",
     "serve:dev": "yarn run build:watch | firebase serve --only functions",
     "serve": "yarn run build && firebase emulators:start --only functions",
     "shell": "yarn run build && firebase functions:shell",
@@ -30,6 +32,7 @@
     "@firebase/app-types": "^0.6.1",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/module-alias": "^2.0.0",
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
@@ -37,12 +40,23 @@
     "eslint": "^7.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-jest": "^23.13.2",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-prettier": "^3.1.4",
     "esm": "^3.2.25",
     "firebase-functions-test": "^0.2.0",
+    "husky": ">=4",
+    "lint-staged": ">=10",
     "prettier": "^2.0.5",
     "typescript": "^3.9.5"
   },
   "keywords": [],
-  "private": true
+  "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix"
+  }
 }
