Add register action

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -3,10 +3,14 @@ actions:
   definition:
     kind: synchronous
     handler: http://192.168.0.58:5003/anythng-a5964/us-central1/services/auth/login
+  permissions:
+  - role: anonymous
 - name: RegisterUser
   definition:
     kind: synchronous
-    handler: http://localhost:5003/services/auth/register
+    handler: http://192.168.0.58:5003/anythng-a5964/us-central1/services/auth/register
+  permissions:
+  - role: anonymous
 custom_types:
   enums: []
   input_objects: []
