--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "@digitalroute/cz-conventional-changelog-for-jira": "4.1.4",
     "@firebase/app-types": "^0.6.1",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
@@ -37,6 +38,7 @@
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
+    "commitizen": "^4.1.2",
     "eslint": "^7.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -51,4 +53,18 @@
   },
   "keywords": [],
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/@digitalroute/cz-conventional-changelog-for-jira"
+    }
+  }
 }
