--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "rm -rf lib && tsc",
     "build:watch": "rm -rf lib && tsc -w",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint src/**/**/*.ts",
+    "generate": "gqless generate",
+    "lint": "eslint .",
     "serve:dev": "yarn run build:watch | firebase serve --only functions",
     "serve": "yarn run build && firebase emulators:start --only functions",
     "shell": "yarn run build && firebase functions:shell",
@@ -23,6 +24,7 @@
     "express": "4.16.4",
     "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.7.0",
+    "gqless": "^0.0.1-alpha.29",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "node-fetch": "2.6.0",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@digitalroute/cz-conventional-changelog-for-jira": "4.1.4",
     "@firebase/app-types": "^0.6.1",
+    "@gqless/cli": "^0.0.1-alpha.31",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
