--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "gqless": "^0.0.1-alpha.29",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
-    "node-fetch": "2.6.0",
-    "typescript": "^3.9.5"
+    "node-fetch": "2.6.0"
   },
   "devDependencies": {
     "@digitalroute/cz-conventional-changelog-for-jira": "4.1.4",
