--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "shell": "yarn run build && firebase functions:shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "start": "yarn run shell"
+    "start": "yarn run shell",
+    "test": "jest"
   },
   "engines": {
     "node": "10"
@@ -35,9 +36,11 @@
     "@gqless/cli": "^0.0.1-alpha.31",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
+    "@types/jest": "^26.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/module-alias": "^2.0.0",
     "@types/node-fetch": "^2.5.7",
+    "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "commitizen": "^4.1.2",
@@ -49,15 +52,19 @@
     "esm": "^3.2.25",
     "firebase-functions-test": "^0.2.0",
     "husky": ">=4",
+    "jest": "^26.0.1",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": ">=10",
     "prettier": "^2.0.5",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.1",
     "typescript": "^3.9.5"
   },
   "keywords": [],
   "private": true,
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && yarn test"
     }
   },
   "lint-staged": {
@@ -67,5 +74,31 @@
     "commitizen": {
       "path": "./node_modules/@digitalroute/cz-conventional-changelog-for-jira"
     }
+  },
+  "jest": {
+    "automock": false,
+    "setupFiles": [
+      "./setupJest.ts"
+    ],
+    "moduleNameMapper": {
+      "@utils": "<rootDir>/utils",
+      "@utils/(.*)": "<rootDir>/utils/$1"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "diagnostics": false
+      }
+    },
+    "rootDir": "src",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "testEnvironment": "jest-environment-node"
   }
 }
