--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,8 @@
 overwrite: true
-schema: "http://localhost:8080/v1/graphql"
+schema:
+  - http://192.168.0.20:8080/v1/graphql:
+      headers:
+        X-Hasura-Admin-Secret: myadminsecretkey
 documents: null
 generates:
   src/utils/generated/types.ts:
