--- a/codegen.yml
+++ b/codegen.yml
@@ -5,7 +5,7 @@ schema:
         X-Hasura-Admin-Secret: myadminsecretkey
 documents: null
 generates:
-  src/utils/generated/schema.ts:
+  src/utils/schema.ts:
     plugins:
       - "typescript"
       - "typescript-resolvers"
