feat: ENG-223 Add fetch user info function
Add fetch info functionality

Add fetch user info spec

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
     "start": "yarn run shell",
-    "test": "jest"
+    "test": "jest",
+    "commit": "git-cz"
   },
   "engines": {
     "node": "10"
