[ docs_update ] : docs: ✏️ ENG-228 Update Documentation for Build and Deploy
✅ Closes: 228

--- a/hasura/config.yaml
+++ b/hasura/config.yaml
@@ -1,6 +1,6 @@
 version: 2
-endpoint: http://192.168.0.20:8080
-admin_secret: myadminsecretkey
+endpoint: https://staging-eaw3qk5meq-uc.a.run.app/
+admin_secret: stagingadminsecret
 metadata_directory: metadata
 actions:
   kind: synchronous
