--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,12 @@
 {
   "functions": {
     "source": ".",
-    "predeploy": "yarn --prefix \"$RESOURCE_DIR\" run build"
+    "predeploy": "yarn --prefix \"$RESOURCE_DIR\" build"
+  },
+  "emulators": {
+    "functions": {
+      "host": "0.0.0.0",
+      "port": 5001
+    }
   }
 }
