ci: ENG-225 Add release to staging workflow
Configure docker-compose setup

Add hasura template.env

Configure fb prod and staging projects

Configure hasura envs

Fix hasura configs

Add staging deploy script and fix compose

Reintegrate hasura environments

Fix vars to point to docker internal

Fix ignore setup template env

Ignore engine-local

Add init local hasura script

Fix init local script

Remove staging/prod envs & move expose ports

Rename staging env

Finish staging deployment

Add CD action

Fix integrate and commit script

--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -1,12 +1,9 @@
-name: Integrate
+name: Deploy-Staging
 
 on:
   push:
-    branches: 
-      - '*'
-      - '!master'
-  pull_request:
-    branches: '*'
+    branches:
+      - 'develop'
 
 jobs:
   integrate:
@@ -17,5 +14,5 @@ jobs:
         with:
           node-version: 10.18.1
       - run: yarn --frozen-lockfile
-      - run: yarn test
       - run: yarn build
+      - run: yarn deploy:staging:all
